--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "locomotive-scroll": "^4.1.4",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.1"
   }
 }
